Fix css jump issue on deposit modal

--- a/src/modals/DepositStakeModal.css
+++ b/src/modals/DepositStakeModal.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     background-color: #242F4B;
     width: 500px;
-    min-height: 540px;
+    min-height: 551px;
     padding: 20px;
     box-sizing: border-box;
 }
